@@ -1,3 +1,8 @@
+2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>
+
+	* Makefile: Move inclusion of ../Makeconf before using $(srcdir)
+	and constrain vpath directives to avoid using ../exec/exec.o.
+
 2002-05-07  Roland McGrath  <roland@frob.com>
 
 	* default_pager.c (part_id): Add const to argument type.
