@@ -1,3 +1,7 @@
+2002-05-20  Ognyan Kulev <ogi@fmi.uni-sofia.bg>
+
+	* Makefile: Move inclusion of ../Makeconf before using $(srcdir).
+
 2002-05-16  Roland McGrath  <roland@frob.com>
 
 	* device.c (enforced): Use dev_status_data_t for SIZES.
